# Python-learn

./: .gitignore  req.txt
FastApi/: main.py  readme.md
LangChain/: pyproject.toml
LangChain/chapter01-summary/: HelloWorld.ipynb
LangChain/chapter02-model IO/: 01-模型的调用.ipynb  02-再谈模型的调用.ipynb  03-提示词模板之PromptTemplate.ipynb  04-提示词模板之ChatPromptTemplate.ipynb  05-提示词模板之少量示例的提示词模板.ipynb  06-从文档中加载Prompt.ipynb  07-输出解析器的使用.ipynb
Magic Methods/: example.py  example2.py  readme.md  属性.py
Tools/: tran_to_sam.py
不基础的Python基础/: __slots__特性.ipynb  readme.md
基础/: 变量.py  字面量.py
学习Pathlib/: example.py
