[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
]

[tool.uv]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
